chore: Add correct order of the z-index.

--- a/packages/map-template/src/components/LegendDialog/LegendDialog.scss
+++ b/packages/map-template/src/components/LegendDialog/LegendDialog.scss
@@ -1,5 +1,5 @@
 .background {
-    z-index: var(--z-index-overlay);
+    z-index: var(--z-index-spinner);
     background-color: var(--color-black-black);
     opacity: 0.5;
     position: fixed;
